test/lit/vpto/materialize_simt_persistent_fragment_i64_alignment_budget_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 --pto-backend=vpto --emit-vpto %s -o /dev/null 2>&1 | FileCheck %s

module attributes {pto.target_arch = "a5", pto.kernel_kind = #pto.kernel_kind<vector>} {
  func.func @persistent_fragment_i64_alignment_budget_invalid(%dst: !pto.ptr<f32, ub>) attributes {pto.entry} {
    %c121_i32 = arith.constant 121 : i32
    %c1_i32 = arith.constant 1 : i32
    %fragment = llvm.alloca %c121_i32 x f32 {pto.persistent} : (i32) -> !llvm.ptr
    %wide_fragment = llvm.alloca %c1_i32 x i64 {pto.persistent} : (i32) -> !llvm.ptr
    %c0 = arith.constant 0 : index
    %c1 = arith.constant 1 : index
    %c121 = arith.constant 121 : index
    %zero = arith.constant 0.000000e+00 : f32
    %zero_i64 = arith.constant 0 : i64

    pto.section.simt<<<32, 1, 1>>> {
      "scf.for"(%c0, %c121, %c1) ({
      ^bb0(%i: index):
        %offset = arith.index_cast %i : index to i64
        %element = llvm.getelementptr %fragment[%offset] : (!llvm.ptr, i64) -> !llvm.ptr, f32
        llvm.store %zero, %element : f32, !llvm.ptr
        scf.yield
      }) {pto.unroll = "full"} : (index, index, index) -> ()
      llvm.store %zero_i64, %wide_fragment : i64, !llvm.ptr
    }

    pto.section.simt<<<32, 1, 1>>> {
      %value = llvm.load %fragment : !llvm.ptr -> f32
      %wide = llvm.load %wide_fragment : !llvm.ptr -> i64
      %wide_i32 = arith.trunci %wide : i64 to i32
      %wide_f32 = arith.sitofp %wide_i32 : i32 to f32
      %result = arith.addf %value, %wide_f32 : f32
      pto.store %result, %dst[%c0] : !pto.ptr<f32, ub>, f32
    }
    return
  }
}

// CHECK: error: 'llvm.alloca' op persistent SIMT fragment slot allocation in function 'persistent_fragment_i64_alignment_budget_invalid' exceeds the 123-slot limit: element offset 0 of type 'i64' needs 2 slot(s), next candidate slot is 122
